<resources>
    <string name="app_name">DocuTracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Title</string>
    <string name="from">From</string>
    <string name="description">Description</string>
    <string name="instructions">Instructions</string>
    <string name="reference">Reference</string>
    <string name="save">Save</string>
    <string name="refered_to_name">Refered To (Name)</string>
    <string name="date_sent">Date Sent</string>
    <string name="return_date">Return Date</string>
    <string name="refer">Refer</string>
    <string name="return_doc">Returned Doc</string>
    <string name="returned_by">Returned By</string>
    <string name="date_returned">Date Returned</string>
    <string name="refered_docs">Refered Docs</string>
    <string name="search">Search</string>
</resources>