<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.technologyedge.docutracker.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/refer"
        android:title="@string/refer" />
    <item
        android:id="@+id/_return"
        android:title="@string/return_doc" />
    <item
        android:id="@+id/referedlist"
        android:title="@string/refered_docs" />
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
</menu>